# preserve-project-conversations

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.ko.md  README.md  SECURITY.md  SKILL.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
agents/: README.md  claude.md  hermes.yaml  openai.yaml  openclaw.yaml
docs/: RELEASE.ko.md  RELEASE.md  SKILLPACKS.md
examples/: project-memory-conversation.md
references/: masterplan.md  research-notes.md  schema.md
scripts/: check_wheel_assets.py  paideia_memory.py
skillpacks/anthropic-claude/preserve-project-conversations/: SKILL.md
skillpacks/anthropic-claude/preserve-project-conversations/agents/: openai.yaml
skillpacks/chatgpt-gpt/: instructions.md  knowledge.md
skillpacks/openclaw-hermes/preserve-project-conversations/: SKILL.md
skillpacks/openclaw-hermes/preserve-project-conversations/agents/: openai.yaml
tests/: test_paideia_memory.py
