[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "preserve-project-conversations"
version = "0.2.0"
description = "Local-first CLI for preserving LLM project conversations as portable layered memory."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "sinmb79" }
]
keywords = ["llm", "memory", "conversation", "local-first", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Documentation",
  "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = []

[project.optional-dependencies]
crypto = ["cryptography>=42"]

[project.urls]
Homepage = "https://github.com/sinmb79/preserve-project-conversations"
Repository = "https://github.com/sinmb79/preserve-project-conversations"
Issues = "https://github.com/sinmb79/preserve-project-conversations/issues"

[project.scripts]
paideia-memory = "paideia_memory:main"

[tool.setuptools]
py-modules = ["paideia_memory"]

[tool.setuptools.package-dir]
"" = "scripts"
